--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -6,7 +6,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 
 /*-- Reset Code --*/
-
+.invoicelink{
+    text-decoration:none !important;
+    color:yellow !important;
+    font-size: x-large !important;
+}
 body {
     padding: 0;
     margin: 0;
@@ -23,11 +27,7 @@ body a {
     text-decoration: none;
 }
 
-.invoicelink{
-    text-decoration:none !important;
-    color:yellowgreen !important;
-    font-size: x-large !important;
-}
+
 
 
 
