--- a/Client/css/style.css
+++ b/Client/css/style.css
@@ -324,7 +324,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
 }
 
 .carousel-indicators {
-    bottom: 20px;
+    margin-bottom: 30px;
 }
 
 /*-- //banner --*/
