--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -109,7 +109,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light {
 .navbar-light .navbar-brand i,
 .w3ls_footer_grid_right h1 a i {
     color: #2ec8a6;
-white-space: pre-wrap;
+
 }
 
 .navbar-light .navbar-brand:hover,
@@ -943,7 +943,9 @@ figure.effect-apollo:hover figcaption::before {
 /*-- //typography page --*/
 
 /*-- //inner pages --*/
-
+a.navbar-brand{
+white-space: pre-wrap;
+}
 /*--responsive--*/
 
 @media(max-width: 1680px) {}
