--- a/Client/ClientMaster2.master
+++ b/Client/ClientMaster2.master
@@ -52,7 +52,7 @@
 		<!-- navigation -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="index.aspx">
-				<i class="fas fa-truck mr-2"></i>Perfect Transport Pvt. Ltd.</a>
+				<i class="fas fa-truck mr-2"></i>Perfect Transport</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 			    aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
