--- a/Client/ClientMaster2.master
+++ b/Client/ClientMaster2.master
@@ -59,7 +59,31 @@
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			
+			<ul class="navbar-nav ml-auto text-center mr-lg-5">
+					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+						<a class="nav-link" href="index.aspx">Home</a>
+					</li>
+					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+                        <a class="nav-link" href="services.aspx">Services</a>
+					</li>
+                    <li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+						<a class="nav-link" href="gallery.aspx">Gallery</a>
+					</li>
+					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+						<a class="nav-link" href="booking.aspx">Booking</a>
+					</li>
+					<li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+						<a class="nav-link" href="contactus.aspx">Contact Us</a>
+					</li>
+                    <li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+						<a class="nav-link" href="aboutus.aspx">About Us</a>
+					</li>
+                    
+                        <li class="nav-item mr-lg-2 mb-lg-0 mb-2">
+						<a class="nav-link" href="login.aspx">Log In</a>
+					</li>
+                        
+				</ul>
 			</div>
 		</nav>
 		<!-- //navigation -->
