--- a/Client/ClientMaster.master
+++ b/Client/ClientMaster.master
@@ -5,8 +5,8 @@
 
 <head>
 		
-    <!-- Meta tag Keywords 
-	<meta name="viewport" content="width=device-width, initial-scale=1"/> -->
+    <!-- Meta tag Keywords -->
+	<meta name="viewport" content="width=device-width, initial-scale=1"/> 
 	<meta charset="UTF-8" />
 	<meta name="keywords" content="Transports Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
 	/>
