--- a/Admin/AdminMaster2.master
+++ b/Admin/AdminMaster2.master
@@ -23,7 +23,7 @@
         <!-- Navigation Bar -->
             <div class="navbar navbar-default navbar-light bg-dark" role="navigation">
                 <a class="navbar-brand" style="color:#2ec8a6" href="index.aspx">
-                    <span><i class="fas fa-truck mr-2"></i></span> Perfect Transport Pvt. Ltd.
+                    <span><i class="fas fa-truck mr-2"></i></span> Perfect Transport
                 </a>
             
      <%--   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
